# enem-questions-rag

./: .coverage  .env.backup.20251011_164751  .env.example  .gitignore  OCR_PROTOTYPE_README.md  README.md  README.md.backup  README_FINAL.md  README_basic.md  analyze_2024_quality.py  demo_hybrid_pipeline.py  demo_hybrid_pipeline_fixed.py  demo_system.py  docker-compose.yml  docker-troubleshoot.py  enem-questions-rag.sln  extraction_quality_report.json  ingestion_log.txt  logs.sh  migrate-enem-scripts.sh  pyproject.toml  python314_backup.txt  reingest-enem-data.sh  reprocess_2024_data.py  requirements.txt  requirements_extraction.txt  requirements_ocr_prototype.txt  reset-dev-env.sh  run_ingestion.py  run_ingestion_external.bat  run_pipeline_epic567.py  setup.sh  start-docker.sh  temp_query_caderno.py  test-connectivity.sh  test_api_final.py  test_api_simple.py  test_complete_extraction.py  test_day2_parser.py  test_docker_api.py  (+12 more)
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.github/: CONTRIBUTING.md
api/: Dockerfile  README.md  database.py  database.py.backup.20251011_164752  demo_server.py  fastapi_app.py  fastapi_app_backup.py  fastapi_app_clean.py  graphql_resolvers.py  graphql_services.py  graphql_types.py  main.py  models.py  requirements.txt  simple_server.py  swagger_docs.py
backups/: enem_rag_backup_20251011_194440.sql  enem_rag_backup_20251011_211605.sql  enem_rag_backup_20251011_211619.sql
data/: semantic_search.db
database/: assessment-migration.sql  complete-init.sql  dead-letter-migration.sql  dedup-migration.sql  extraction-v2-migration.sql  generated-questions-migration.sql  hybrid-search-migration.sql  init.sql  optimize-search.sql  pgvector-migration.sql
(+447 files in other folders)
